crates/aranya-policy-compiler/tests/data/match_stmt/arm_builtin_call_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid expression
  |
3 |         saturating_add(0, 1)=> {}
  |         ^^^^^^^^^^^^^^^^^^^^ match pattern must be a literal expression
